--- a/public/chat.html
+++ b/public/chat.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chat App</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="chat.css">
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    <div id="chat-container"></div>
+    <div class="chat">
+        <div id="sidebar" class="chat__sidebar">
+            <div class="sidebar-header">
+                <img src="/img/avatar.svg" alt="">
+                <h1 class="room-title">Chats</h1>
+            </div>
+            <div class="sidebar-body">
+                <span class="sidebar-search-box">
+                    <label class="search-bar">
+                        <i class="fas fa-search"></i>
+                        <input type="text" autocomplete="off" placeholder="Search Messenger">
+                    </label>
+                </span>
+                <div class="sidebar-chat-list">
+
+                </div>
+            </div>
+        </div>
+        <div class="chat__main">
+            <div id="messages" class="chat__messages"></div>
+
+            <div class="compose">
+                <form id="message-form" autocomplete="off">
+                    <input name="message" placeholder="Message">
+                    <button>Send</button>
+                </form>
+                <button id="send-location">Send location</button>
+            </div>
+        </div>
+    </div>
+
+    <script id="message-template" type="text/html">
+            <div class="message">
+                <p>
+                    <span class="message__name">{{username}}</span>
+                    <span class="message__meta">{{createdAt}}</span>
+                </p>
+                <p>{{message}}</p>
+            </div>
+    </script>
+
+    <script id="location-message-template" type="text/html">
+            <div class="message">
+                <p>
+                    <span class="message__name">{{username}}</span>
+                    <span class="message__meta">{{createdAt}}</span>
+                </p>
+                <p><a href="{{url}}" target="_blank">My current location</a></p>
+            </div>
+    </script>
+    <script id="sidebar-template" type="text/html">
+        <div class="sidebar-body">
+            <h3 class="list-title">active users:</h3>
+            <ul class="users">
+                {{#users}}
+                <li>{{username}}</li>
+                {{/users}}
+            </ul>      
+        </div>
+        
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
 </body>
+
 </html>
