rendering auth pages

--- a/public/chat.html
+++ b/public/chat.html
@@ -4,7 +4,9 @@
 <head>
     <title>Chat App</title>
     <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/all.min.css">
 </head>
 
 <body>
@@ -21,8 +23,97 @@
                         <input type="text" autocomplete="off" placeholder="Search Messenger">
                     </label>
                 </span>
-                <div class="sidebar-chat-list">
-
+                <div class="conversations">
+                    <ul class="conversation-list">
+                        <li class="row conversation-list-item message-unread">
+                            <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                <img src="/img/avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col-8 row align-self-center conversation-content message-unread">
+                                <h6 class="col-12 conversation-list-item-title">Bloc E</h6>
+                                <div class="row col-12 conversation-list-item-message">
+                                    <div class="conversation_list_message col-12">za3rora: hhhhh <span style="padding-left: 1em;font-weight: normal;color: #999999">12:00 PM</span></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="row conversation-list-item">
+                            <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                <img src="/img/fem-avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col-10 row align-self-center conversation-content message-unread">
+                                <h6 class="col-12 conversation-list-item-title">Ntawa3na</h6>
+                                <div class="row col-12 conversation-list-item-message">
+                                    <div class="conversation_list_message col-12">louz: arabak <span style="padding-left: 1em;font-weight: normal;color: #999999">11:56 AM</span></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="row conversation-list-item message-active">
+                            <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                <img src="/img/boy-avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col-10 row align-self-center conversation-content">
+                                <h6 class="col-12 conversation-list-item-title">Choose A Name</h6>
+                                <div class="row col-12 conversation-list-item-message">
+                                    <div class="conversation_list_message col-12">w 1 f analyse: diro start ! <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="row conversation-list-item">
+                            <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                <img src="/img/fem-avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col-10 row align-self-center conversation-content">
+                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                <div class="row col-12 conversation-list-item-message">
+                                    <div class="conversation_list_message col-12">verdinio: ha dkhol 9wd! <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="row conversation-list-item">
+                            <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                <img src="/img/avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col-10 row align-self-center conversation-content">
+                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                <div class="row col-12 conversation-list-item-message">
+                                    <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="row conversation-list-item">
+                            <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                <img src="/img/boy-avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col-10 row align-self-center conversation-content">
+                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                <div class="row col-12 conversation-list-item-message">
+                                    <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="row conversation-list-item">
+                            <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                <img src="/img/avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col-10 row align-self-center conversation-content">
+                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                <div class="row col-12 conversation-list-item-message">
+                                    <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="row conversation-list-item">
+                            <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                <img src="/img/avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col-10 row align-self-center conversation-content">
+                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                <div class="row col-12 conversation-list-item-message">
+                                    <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                </div>
+                            </div>
+                        </li>        
+                    </ul>
                 </div>
             </div>
         </div>
@@ -73,8 +164,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="/js/all.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
+    <!-- <script src="/js/chat.js"></script> -->
 </body>
 
 </html>
